--- a/hrms-frontend/package.json
+++ b/hrms-frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
@@ -27,7 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.18.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
@@ -35,14 +36,15 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2",
+    "react-paginate": "^8.3.0",
+    "react-router-dom": "^6.30.0",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.8",
+    "tw-animate-css": "^1.2.9",
     "web-vitals": "^4.2.3",
     "zod": "^3.23.8"
   },
@@ -65,7 +67,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "vite": "^6.3.5"
   },
   "eslintConfig": {
     "env": {
