--- a/hrms-backend/package.json
+++ b/hrms-backend/package.json
@@ -19,7 +19,7 @@
           "jsonwebtoken": "^9.0.2",
           "mongoose": "^8.13.3",
           "mssql": "^11.0.1",
-          "multer": "^1.4.5-lts.1",
+          "multer": "^1.4.4",
           "multer-gridfs-storage": "^5.0.2",
           "node-cron": "^3.0.3",
           "pdfkit": "^0.17.0",
