--- a/hrms-backend/package.json
+++ b/hrms-backend/package.json
@@ -25,6 +25,7 @@
           "pdfkit": "^0.17.0",
           "soap": "^1.1.11",
           "socket.io": "^4.8.1",
+          "xlsx": "^0.18.5",
           "xml2js": "^0.6.2"
      }
 }
