--- a/hrms-frontend/package.json
+++ b/hrms-frontend/package.json
@@ -46,6 +46,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.9",
     "web-vitals": "^4.2.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
