OD form OT form included

--- a/hrms-frontend/tsconfig.json
+++ b/hrms-frontend/tsconfig.json
@@ -20,7 +20,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../use-toast.ts"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
