--- a/hrms-backend-common/package.json
+++ b/hrms-backend-common/package.json
@@ -16,16 +16,20 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.65.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.13.3",
     "mssql": "^11.0.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "node-cron": "^3.0.3",
+    "number-to-words": "^1.2.4",
     "pdfkit": "^0.17.0",
+    "pizzip": "^3.2.0",
     "soap": "^1.1.11",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5",
